Fix vertical alignment on homepage email signup form.

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -32,3 +32,8 @@
 #front-page-thumb3 {
     background-color: #d4eeed;
 }
+
+// fix signup form vertical alignment
+input#signup-email {
+    margin-bottom: 0px;
+}
